--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,5 @@
-<header class="header">
-  <h1 class="logo">🍿 CineFinder</h1>
-  <nav class="navbar">
-    <a routerLink="/" class="nav-link">Inicio</a>
-    <a routerLink="/trending" class="nav-link">Tendencias</a>
-    <a routerLink="/favorites" class="nav-link">Favoritos</a>
-  </nav>
-</header>
+<app-navbar></app-navbar>
 
 <main class="main-content">
-  <router-outlet></router-outlet> <!-- 👈 Angular renderiza aquí según la URL -->
+  <router-outlet></router-outlet>
 </main>
