--- a/src/app/modules/movies/movie-detail/movie-detail.component.scss
+++ b/src/app/modules/movies/movie-detail/movie-detail.component.scss
@@ -263,3 +263,9 @@
     }
   }
 }
+
+.recommendations-section {
+  margin-top: 40px;
+  padding-top: 20px;
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
+}
