--- a/src/app/modules/movies/movie-detail/movie-detail.component.html
+++ b/src/app/modules/movies/movie-detail/movie-detail.component.html
@@ -108,6 +108,13 @@
           </div>
         </mat-tab>
         
+        <mat-tab label="Dónde Ver">
+          <div class="tab-content">
+            <h2>Dónde Ver</h2>
+            <app-watch-providers [movieId]="movieId"></app-watch-providers>
+          </div>
+        </mat-tab>
+        
         <mat-tab label="Vídeos">
           <div class="tab-content">
             <h2>Vídeos</h2>
