--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,7 @@
   --accent-color: #ff4081;
   --accent-light: #ff79b0;
   --accent-dark: #c60055;
+  --warn-color: #f44336;
   
   /* Colores de fondo y texto */
   --dark-bg: #121212;
