--- a/src/app/modules/movies/movie-detail/movie-detail.component.html
+++ b/src/app/modules/movies/movie-detail/movie-detail.component.html
@@ -59,10 +59,10 @@
     </div>
     
     <div class="container content-section">
-      <mat-tab-group>
-        <mat-tab label="Resumen">
+      <mat-tab-group class="custom-tabs">
+        <mat-tab label="{{ 'movieDetail.overview' | translate }}">
           <div class="tab-content">
-            <h2>Resumen</h2>
+            <h2>{{ 'movieDetail.overview' | translate }}</h2>
             <p class="overview">{{ movie.overview }}</p>
             
             <div class="details-grid">
@@ -86,7 +86,7 @@
 
             <!-- Colección -->
             <div class="collection-info" *ngIf="movie.belongs_to_collection">
-              <h2>Parte de la colección</h2>
+              <h2>{{ 'movieDetail.partOfCollection' | translate }}</h2>
               <div class="collection-card" [routerLink]="['/collection', movie.belongs_to_collection.id]">
                 <div class="collection-image">
                   <img 
@@ -97,7 +97,7 @@
                   <h3>{{ movie.belongs_to_collection.name }}</h3>
                   <button mat-button color="primary">
                     <mat-icon>collections</mat-icon>
-                    Ver colección completa
+                    {{ 'movieDetail.viewCollection' | translate }}
                   </button>
                 </div>
               </div>
@@ -108,9 +108,9 @@
           </div>
         </mat-tab>
         
-        <mat-tab label="Reparto">
+        <mat-tab label="{{ 'movieDetail.cast' | translate }}">
           <div class="tab-content">
-            <h2>Reparto</h2>
+            <h2>{{ 'movieDetail.cast' | translate }}</h2>
             <div class="cast-grid">
               @if (movie.credits && movie.credits.cast && movie.credits.cast.length > 0) {
                 @for (actor of movie.credits.cast.slice(0, 10); track actor.id) {
@@ -124,22 +124,22 @@
                   </div>
                 }
               } @else {
-                <p>No hay información del reparto disponible</p>
+                <p>{{ 'movieDetail.noCast' | translate }}</p>
               }
             </div>
           </div>
         </mat-tab>
         
-        <mat-tab label="Dónde Ver">
+        <mat-tab label="{{ 'movieDetail.whereToWatch' | translate }}">
           <div class="tab-content">
-            <h2>Dónde Ver</h2>
+            <h2>{{ 'movieDetail.whereToWatch' | translate }}</h2>
             <app-watch-providers [movieId]="movieId"></app-watch-providers>
           </div>
         </mat-tab>
         
-        <mat-tab label="Vídeos">
+        <mat-tab label="{{ 'movieDetail.videos' | translate }}">
           <div class="tab-content">
-            <h2>Vídeos</h2>
+            <h2>{{ 'movieDetail.videos' | translate }}</h2>
             <div class="videos-grid">
               @if (movie.videos && movie.videos.results && movie.videos.results.length > 0) {
                 @for (video of movie.videos.results; track video.id) {
@@ -161,25 +161,25 @@
                   </div>
                 }
               } @else {
-                <p class="no-content">No hay vídeos disponibles para esta película.</p>
+                <p class="no-content">{{ 'movieDetail.noVideos' | translate }}</p>
               }
             </div>
           </div>
         </mat-tab>
         
-        <mat-tab label="Imágenes">
+        <mat-tab label="{{ 'movieDetail.images' | translate }}">
           <div class="tab-content">
             <app-movie-images [images]="movie.images" [title]="movie.title"></app-movie-images>
           </div>
         </mat-tab>
         
-        <mat-tab label="Reseñas">
+        <mat-tab label="{{ 'movieDetail.reviews' | translate }}">
           <div class="tab-content">
             <app-movie-reviews [reviews]="movie.reviews" [movieId]="movie.id"></app-movie-reviews>
           </div>
         </mat-tab>
         
-        <mat-tab label="Recomendaciones">
+        <mat-tab label="{{ 'movieDetail.recommendations' | translate }}">
           <div class="tab-content">
             <app-movie-recommendations [movieId]="movieId"></app-movie-recommendations>
           </div>
